--- a/index.html
+++ b/index.html
@@ -1,171 +1,178 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Equinox API</title>
-    <!-- Include Tailwind CSS CDN -->
+    <title>Equinox API Documentation</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-image: url('https://cdn.discordapp.com/attachments/1118173037955645560/1137328725701173269/bg.jpg');
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-position: center;
-            text-align: center;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #f8f9fc;
+            color: #2d3748;
             margin: 0;
             padding: 0;
+        }
+
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        header {
+            text-align: center;
+            padding: 40px 0;
+        }
+
+        header h1 {
+            font-size: 3.5rem;
+            font-weight: 800;
+            margin-bottom: 20px;
+        }
+
+        header p {
+            font-size: 1.25rem;
+            margin-bottom: 20px;
+        }
+
+        .logo {
+            max-width: 100px;
+            margin-bottom: 20px;
+        }
+
+        .description-image {
+            max-width: 300px;
+            margin: 0 auto;
+            display: block;
+            margin-bottom: 20px;
+        }
+
+        .method {
+            background-color: #4b5563;
+            border-radius: 1rem;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+            padding: 40px;
+            text-align: left;
+            position: relative;
+            overflow: hidden;
+            transition: transform 0.3s ease;
+        }
+
+        .method::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 8px;
+            background-color: #10b981;
+            border-top-left-radius: 1rem;
+            border-top-right-radius: 1rem;
+        }
+
+        .method:hover {
+            transform: translateY(-10px);
+        }
+
+        .method h2 {
+            font-size: 2.5rem;
+            font-weight: 700;
+            margin-bottom: 20px;
+        }
+
+        .method p {
+            font-size: 1.125rem;
+            line-height: 1.6;
+        }
+
+        .telegram-link {
+            margin-top: 40px;
+            text-align: center;
+        }
+
+        .telegram-link p {
+            font-size: 1.25rem;
+            margin-bottom: 20px;
+        }
+
+        .telegram-link a {
+            background-color: #2563eb;
+            color: #ffffff;
+            font-size: 1.25rem;
+            padding: 15px 40px;
+            border-radius: 0.5rem;
+            text-decoration: none;
+            transition: background-color 0.3s ease;
+        }
+
+        .telegram-link a:hover {
+            background-color: #1e40af;
         }
     </style>
 </head>
 <body>
 
-    <h1 class="my-8 text-4xl">Equinox API</h1>
-    <h1 class="mb-8">These Methods Are Normal Networks Methods Contact @ackraw From Telegram For Private Methods</h1>
+    <div class="container">
+        <header>
+            <img src="https://i.imgur.com/MhHXjLe.png" alt="Equinox API Logo" class="logo">
+            <h1>Equinox API Documentation</h1>
+            <p>Unlock the potential of Equinox API and explore a range of powerful network methods.</p>
+            <img src="https://i.imgur.com/YA6hw6y.png" alt="Description Image" class="description-image">
+        </header>
 
-    <!-- Method Cards -->
-    <div class="grid gap-6 md:grid-cols-2 lg:grid-cols-3 max-w-4xl mx-auto">
-        <div class="method bg-gray-800 rounded-lg p-6 shadow-md">
-            <h2 class="text-blue-500 text-2xl font-semibold">TCP</h2>
-            <p class="text-gray-300">
-                TCP FLOOD
-            </p>
+        <div class="grid gap-8 md:grid-cols-2 lg:grid-cols-3">
+            <div class="method bg-gray-800 rounded-lg p-6 shadow-md">
+                <h2 class="text-blue-500 text-2xl font-semibold">UDP</h2>
+                <p class="text-gray-300">
+                    Initiate UDP Flood attacks to overwhelm network targets with a high volume of User Datagram Protocol packets, disrupting services and causing downtime.
+                </p>
+            </div>
+
+            <!-- Add other method cards here -->
+
+            <div class="method bg-gray-800 rounded-lg p-6 shadow-md">
+                <h2 class="text-blue-500 text-2xl font-semibold">OVH-TCP</h2>
+                <p class="text-gray-300">
+                    Employ OVH Bypass using Transmission Control Protocol (TCP) to circumvent OVH's mitigation measures and launch powerful DDoS attacks without detection.
+                </p>
+            </div>
+
+            <div class="method bg-gray-800 rounded-lg p-6 shadow-md">
+                <h2 class="text-blue-500 text-2xl font-semibold">OVH-UDP</h2>
+                <p class="text-gray-300">
+                    Utilize OVH Bypass using User Datagram Protocol (UDP) to evade OVH's network protection and execute devastating DDoS assaults, bypassing conventional defenses.
+                </p>
+            </div>
+
+            <div class="method bg-gray-800 rounded-lg p-6 shadow-md">
+                <h2 class="text-blue-500 text-2xl font-semibold">GAME</h2>
+                <p class="text-gray-300">
+                    Employ Game Bypass to penetrate gaming servers and disrupt gameplay, causing frustration among players and undermining server stability.
+                </p>
+            </div>
+
+            <div class="method bg-gray-800 rounded-lg p-6 shadow-md">
+                <h2 class="text-blue-500 text-2xl font-semibold">UDP-PPS</h2>
+                <p class="text-gray-300">
+                    Initiate PPS Flood attacks using User Datagram Protocol (UDP) to overload network devices with a high rate of packets per second, leading to network congestion and service disruption.
+                </p>
+            </div>
+
+            <div class="method bg-gray-800 rounded-lg p-6 shadow-md">
+                <h2 class="text-blue-500 text-2xl font-semibold">SOCKET</h2>
+                <p class="text-gray-300">
+                    Execute Socket Flood attacks to exhaust server resources by opening a large number of connections, disrupting service availability and causing performance degradation.
+                </p>
+            </div>
         </div>
 
-        <div class="method bg-gray-800 rounded-lg p-6 shadow-md">
-            <h2 class="text-blue-500 text-2xl font-semibold">UDP</h2>
-            <p class="text-gray-300">
-                UDP FLOOD
-            </p>
+        <div class="telegram-link">
+            <p>Stay updated with the latest developments. Join our Telegram channel:</p>
+            <a href="https://t.me/equinoxapi" target="_blank">Join Telegram</a>
         </div>
-
-        <div class="method bg-gray-800 rounded-lg p-6 shadow-md">
-            <h2 class="text-blue-500 text-2xl font-semibold">OVH-TCP</h2>
-            <p class="text-gray-300">
-                OVH BYPASS using TRANSMISSION CONTROL PROTOCOL (TCP)
-            </p>
-        </div>
-
-        <div class="method bg-gray-800 rounded-lg p-6 shadow-md">
-            <h2 class="text-blue-500 text-2xl font-semibold">OVH-UDP</h2>
-            <p class="text-gray-300">
-                OVH BYPASS using USER DATAGRAM PROTOCOL (UDP)
-            </p>
-        </div>
-
-        <div class="method bg-gray-800 rounded-lg p-6 shadow-md">
-            <h2 class="text-blue-500 text-2xl font-semibold">GAME</h2>
-            <p class="text-gray-300">
-                GAME BYPASS
-            </p>
-        </div>
-
-        <div class="method bg-gray-800 rounded-lg p-6 shadow-md">
-            <h2 class="text-blue-500 text-2xl font-semibold">UDP-PPS</h2>
-            <p class="text-gray-300">
-                PPS FLOOD USING USER DATAGRAM PROTOCOL (UDP)
-            </p>
-        </div>
-
-        <div class="method bg-gray-800 rounded-lg p-6 shadow-md">
-            <h2 class="text-blue-500 text-2xl font-semibold">SOCKET</h2>
-            <p class="text-gray-300">
-                SOCKET FLOOD
-            </p>
-        </div>
-
-        <div class="method bg-gray-800 rounded-lg p-6 shadow-md">
-            <h2 class="text-blue-500 text-2xl font-semibold">SYN</h2>
-            <p class="text-gray-300">
-                SYN FLOOD
-            </p>
-        </div>
-
-        <div class="method bg-gray-800 rounded-lg p-6 shadow-md">
-            <h2 class="text-blue-500 text-2xl font-semibold">FIVEM-DIE</h2>
-            <p class="text-gray-300">
-                FIVEM BYPASS FLOOD
-            </p>
-        </div>
-
-        <div class="method bg-gray-800 rounded-lg p-6 shadow-md">
-            <h2 class="text-blue-500 text-2xl font-semibold">ROBLOX-VIP</h2>
-            <p class="text-gray-300">
-                ROBLOX VIP FLOOD
-            </p>
-        </div>
-
-        <div class="method bg-gray-800 rounded-lg p-6 shadow-md">
-            <h2 class="text-blue-500 text-2xl font-semibold">AMP</h2>
-            <p class="text-gray-300">
-                AMPLIFICATION FLOOD
-            </p>
-        </div>
-
-        <div class="method bg-gray-800 rounded-lg p-6 shadow-md">
-            <h2 class="text-blue-500 text-2xl font-semibold">R6-VIP</h2>
-            <p class="text-gray-300">
-                RAINBOW SIX SIEGE FLOOD
-            </p>
-        </div>
-
-        <div class="method bg-gray-800 rounded-lg p-6 shadow-md">
-            <h2 class="text-blue-500 text-2xl font-semibold">HANDSHAKE</h2>
-            <p class="text-gray-300">
-                TCP-SYN FLOOD
-            </p>
-        </div>
-
-        <div class="method bg-gray-800 rounded-lg p-6 shadow-md">
-            <h2 class="text-blue-500 text-2xl font-semibold">L7-Equinox</h2>
-            <p class="text-gray-300">
-                HTTP/HTTPS METHOD WITH HIGH REQUESTS
-            </p>
-        </div>
-
-        <div class="method bg-gray-800 rounded-lg p-6 shadow-md">
-            <h2 class="text-blue-500 text-2xl font-semibold">TLS-V3</h2>
-            <p class="text-gray-300">
-                TLS 1.3 FLOOD
-            </p>
-        </div>
-
-        <div class="method bg-gray-800 rounded-lg p-6 shadow-md">
-            <h2 class="text-blue-500 text-2xl font-semibold">TLS-CAPTCHA</h2>
-            <p class="text-gray-300">
-                BYPASSING CAPTCHA USING TLS
-            </p>
-        </div>
-
-        <div class="method bg-gray-800 rounded-lg p-6 shadow-md">
-            <h2 class="text-blue-500 text-2xl font-semibold">HTTP-REFUSE</h2>
-            <p class="text-gray-300">
-                HTTP/HTTPS SPAM
-            </p>
-        </div>
-
-        <div class="method bg-gray-800 rounded-lg p-6 shadow-md">
-            <h2 class="text-blue-500 text-2xl font-semibold">L7-Equinox</h2>
-            <p class="text-gray-300">
-                FUCKS TURKISH WEBSITES
-            </p>
-        </div>
-
-        <div class="method bg-gray-800 rounded-lg p-6 shadow-md">
-            <h2 class="text-blue-500 text-2xl font-semibold">BROWSER</h2>
-            <p class="text-gray-300">
-                EMULATING BROWSER
-            </p>
-        </div>
-
-    </div>
-
-    <!-- Telegram Link -->
-    <div class="telegram-link mt-12">
-        <p>For more information and updates, join our Telegram channel:</p>
-        <a href="https://t.me/equinoxapi" target="_blank" class="bg-blue-600 text-white px-6 py-3 rounded-lg text-lg mt-4 block w-max mx-auto">Join Telegram</a>
     </div>
 
 </body>
 </html>
+
